--- a/Makefile.in
+++ b/Makefile.in
@@ -113,7 +113,7 @@ $(FLINT_LIB): $(LOBJS) $(LIB_SOURCES) $(EXT_SOURCES) $(HEADERS) $(EXT_HEADERS) |
 	$(AT)if [ "$(WANT_NTL)" -ne "1" ]; then \
 	  $(CC) $(CFLAGS) $(ABI_FLAG) -shared $(EXTRA_SHARED_FLAGS) $(LOBJS) $(MOD_LOBJS) $(EXT_OBJS) -o $(FLINT_LIB) $(LDFLAGS) $(LIBS2); \
 	fi
-	$(AT)if [ "$(FLINT_LIBNAME)" -eq "libflint.so" ]; then \
+	$(AT)if [ "$(FLINT_SOLIB)" -eq "1" ]; then \
 		ldconfig -n "$(CURDIR)"; \
 	fi
 
