remove earlier Visual Studio build

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,13 @@ doc/latex/flint-manual.*
 doc/latex/input/*
 doc/latex/create_doc
 libflint*
+*.suo
+*.pyc
+/build.vc14/build_tests/arith/test/*.obj
+*.manifest
+*.obj
+*.log
+*.user
+*.tlog
+*.sdf
+build.vc12
