--- a/Makefile.in
+++ b/Makefile.in
@@ -80,7 +80,8 @@ distclean: clean
 	rm -f config.h fft_tuning.h fmpz-conversions.h Makefile fmpz/fmpz.c
 
 dist:
-	git archive --format tar --prefix flint-2.5.0/ flint-2.5 > ../flint-2.5.0.tar; gzip ../flint-2.5.0.tar
+	git archive --format tar --prefix flint-2.5.0/ flint-2.5 > ../flint-2.5.tar; gzip ../flint-2.5.tar
+	git archive --format zip --prefix flint-2.5.0/ flint-2.5 > ../flint-2.5.zip 
 
 profile: library $(PROF_SOURCES) $(EXT_PROF_SOURCES) build/profiler.o
 	mkdir -p build/profile
