Better solution for library copying issue.

--- a/Makefile.in
+++ b/Makefile.in
@@ -199,6 +199,10 @@ endif
 install: library
 	mkdir -p "$(DESTDIR)$(PREFIX)/$(LIBDIR)"
 	mkdir -p "$(DESTDIR)$(PREFIX)/include/flint"
+	$(AT)if [ "$(FLINT_SHARED)" -eq "1" ]; then \
+	   cp $(FLINT_LIB) "$(DESTDIR)$(PREFIX)/$(LIBDIR)"; \
+	   cp -a $(shell ls $(FLINT_LIBNAME)*) "$(DESTDIR)$(PREFIX)/$(LIBDIR)"; \
+	fi
 	$(AT)$(MAKE) -f ./Makefile -C . install-copy
 	$(AT)if [ "$(FLINT_STATIC)" -eq "1" ]; then \
 		cp libflint.a "$(DESTDIR)$(PREFIX)/$(LIBDIR)"; \
@@ -210,12 +214,6 @@ install: library
 	mkdir -p "$(DESTDIR)$(PREFIX)/include/flint/flintxx"
 	cp flintxx/*.h "$(DESTDIR)$(PREFIX)/include/flint/flintxx"
 	cp *xx.h "$(DESTDIR)$(PREFIX)/include/flint"
-
-install-copy:
-	$(AT)if [ "$(FLINT_SHARED)" -eq "1" ]; then \
-	   cp $(FLINT_LIB) "$(DESTDIR)$(PREFIX)/$(LIBDIR)"; \
-	   cp -a $(wildcard $(FLINT_LIBNAME)*) "$(DESTDIR)$(PREFIX)/$(LIBDIR)"; \
-	fi
 
 build:
 	mkdir -p build
@@ -250,5 +248,5 @@ build/interfaces/test/t-NTL-interface$(EXEEXT): interfaces/test/t-NTL-interface.
 print-%:
 	@echo '$*=$($*)'
 
-.PHONY: profile library shared static clean examples tune check tests distclean dist install install-copy all valgrind
+.PHONY: profile library shared static clean examples tune check tests distclean dist install all valgrind
 
