Fix linking problems on macosx
Change in travis script:

  Install the dependencies (mpir, mpfr) in a custom local/
  repository.

Change in Makefile:

  Fix install_name on osx at install (using install_name_tool).
  After a make (alone) the install_name is set to be the build directory
  so that tests can be run.

--- a/Makefile.in
+++ b/Makefile.in
@@ -210,6 +210,9 @@ install: library
 	mkdir -p "$(DESTDIR)$(PREFIX)/include/flint/flintxx"
 	cp flintxx/*.h "$(DESTDIR)$(PREFIX)/include/flint/flintxx"
 	cp *xx.h "$(DESTDIR)$(PREFIX)/include/flint"
+	if [[ "$(OS)" = "Darwin" ]]; then \
+    		install_name_tool -id "$(DESTDIR)$(PREFIX)/$(LIBDIR)/$(FLINT_LIB)" "$(DESTDIR)$(PREFIX)/$(LIBDIR)/$(FLINT_LIBNAME)"; \
+	fi
 
 build:
 	mkdir -p build
