--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ config.h
 fft_tuning.h
 fmpz-conversions.h
 Makefile
+doc/build
 doc/latex/flint-manual.*
 !doc/latex/flint-manual.tex
 doc/latex/input/*
