experimental NTL support for cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,13 @@ include(CheckFunctionExists)
 include(CheckPrototypeDefinition)
 include(TestBigEndian)
 
-project(flint C)
+project(flint LANGUAGES C CXX)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake")
 
 find_package(GMP REQUIRED)
 find_package(MPFR REQUIRED)
+find_package(NTL REQUIRED)
 find_package(PythonInterp REQUIRED)
 
 if(MSVC)
@@ -31,6 +32,7 @@ set(BUILD_DIRS
     fq_nmod fq_nmod_vec fq_nmod_mat fq_nmod_poly fq_nmod_mpoly fq_nmod_poly_factor 
     fq_zech fq_zech_vec fq_zech_mat fq_zech_poly fq_zech_poly_factor 
     mpoly fmpz_mpoly nmod_mpoly fmpq_mpoly thread_pool
+    flintxx interfaces
 )
 
 set(TEMPLATE_DIRS
@@ -41,7 +43,7 @@ set(TEMPLATE_DIRS
 set(SOURCES
     printf.c fprintf.c sprintf.c scanf.c fscanf.c sscanf.c clz_tab.c
     memory_manager.c version.c profiler.c thread_support.c exception.c
-    hashmap.c inlines.c fmpz/fmpz.c
+    hashmap.c inlines.c fmpz/fmpz.c interfaces/NTL-interface.cpp
 )
 
 set(HEADERS
@@ -182,9 +184,9 @@ endforeach()
 file(GLOB TEMP "${CMAKE_SOURCE_DIR}/*.h")
 list(APPEND HEADERS ${TEMP})
 
-add_library(flint ${SOURCES})
+add_library(flint SHARED ${SOURCES})
 target_link_libraries(flint 
-    ${GMP_LIBRARIES} ${MPFR_LIBRARIES} ${PThreads_LIBRARIES}
+    ${GMP_LIBRARIES} ${MPFR_LIBRARIES} ${PThreads_LIBRARIES} ${NTL_LIBRARIES}
 )
 
 # Include directories
@@ -192,6 +194,7 @@ target_link_libraries(flint
 target_include_directories(flint PUBLIC 
     ${CMAKE_CURRENT_SOURCE_DIR} ${GMP_INCLUDE_DIRS} ${MPFR_INCLUDE_DIRS}
     ${CMAKE_CURRENT_BINARY_DIR} ${PThreads_INCLUDE_DIRS}
+    ${NTL_INCLUDE_DIRS}
 )
 
 
@@ -255,7 +258,7 @@ if(BUILD_TESTING)
             add_executable(${test_name} ${test_file})
             target_link_libraries(${test_name}
                 flint test_helpers
-                ${GMP_LIBRARIES} ${MPFR_LIBRARIES} ${PThreads_LIBRARIES}
+		${GMP_LIBRARIES} ${MPFR_LIBRARIES} ${PThreads_LIBRARIES} ${NTL_LIBRARIES}
             )
 
             add_test(
