--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ include(CheckIncludeFiles)
 include(CheckFunctionExists)
 include(CheckPrototypeDefinition)
 include(CheckCCompilerFlag)
+include(CheckLibraryExists)
 include(TestBigEndian)
 
 project(flint LANGUAGES C CXX)
@@ -151,6 +152,8 @@ check_function_exists(gettimeofday HAVE_GETTIMEOFDAY)
 
 check_c_compiler_flag("-mpopcnt" HAS_FLAG_MPOPCNT)
 check_c_compiler_flag("-funroll-loops" HAS_FLAG_UNROLL_LOOPS)
+
+check_library_exists(${PThreads_LIBRARIES} pthread_getaffinity_np pthread.h HAVE_CPU_SET_T)
 
 set(HAVE_TLS ON CACHE BOOL "Use thread local storage.")
 
