--- a/Makefile.in
+++ b/Makefile.in
@@ -74,7 +74,7 @@ clean:
 	rm -rf build
 
 distclean: clean
-	rm -f config.h fft_tuning.h fmpz-conversions.h Makefile fmpz/fmpz.c
+	rm -f config.h config.log fft_tuning.h fmpz-conversions.h Makefile fmpz/fmpz.c
 
 dist:
 	git archive --format tar --prefix flint-2.5.2/ flint-2.5 > ../flint-2.5.2.tar; gzip ../flint-2.5.2.tar
