--- a/Makefile.in
+++ b/Makefile.in
@@ -15,9 +15,10 @@ BUILD_DIRS = aprcl ulong_extras long_extras perm fmpz fmpz_vec fmpz_poly \
    fq fq_vec fq_mat fq_poly fq_poly_factor fq_embed \
    fq_nmod fq_nmod_vec fq_nmod_mat fq_nmod_poly fq_nmod_poly_factor fq_nmod_embed \
    fq_zech fq_zech_vec fq_zech_mat fq_zech_poly fq_zech_poly_factor fq_zech_embed \
-   fmpz_mod_mat mpoly fmpz_mpoly fmpq_mpoly nmod_mpoly fq_nmod_mpoly fmpz_mod_mpoly \
-   thread_pool fmpz_mod \
-   n_poly fmpz_mpoly_factor fmpq_mpoly_factor nmod_mpoly_factor fq_nmod_mpoly_factor fq_zech_mpoly fq_zech_mpoly_factor \
+   fmpz_mod_mat mpoly fmpz_mpoly fmpq_mpoly nmod_mpoly fq_nmod_mpoly \
+   thread_pool fmpz_mod fmpz_mod_vec fmpz_mod_mpoly \
+   n_poly fmpz_mpoly_factor fmpq_mpoly_factor nmod_mpoly_factor \
+   fq_nmod_mpoly_factor fq_zech_mpoly fq_zech_mpoly_factor \
    $(EXTRA_BUILD_DIRS)
 
 TEMPLATE_DIRS = fq_vec_templates fq_mat_templates fq_poly_templates \
