--- a/Makefile.in
+++ b/Makefile.in
@@ -12,7 +12,7 @@ QUIET_AR  = @echo '   ' AR  ' ' $@;
 
 AT=@
 
-BUILD_DIRS = gr gr_mat gr_poly gr_mpoly gr_vec $(EXTRA_BUILD_DIRS)
+BUILD_DIRS = gr gr_mat gr_poly gr_mpoly gr_vec gr_special $(EXTRA_BUILD_DIRS)
 
 TEMPLATE_DIRS = 
 
